trying to fix container being too wide

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,9 @@
   width: 100%;
   max-width: 100vw;
   height: 100%;
-  margin-top: 1rem;
-  margin-bottom: 4.5rem;
+  /* margin-top: 1rem;
+  margin-bottom: 4.5rem; */
+  overflow-x: hidden;
   text-align: center;
   box-sizing: border-box;
   padding: 0.5rem;
