--- a/src/components/SearchInput.css
+++ b/src/components/SearchInput.css
@@ -1,7 +1,7 @@
 .container {
   padding: 2rem;
-  width: 330px;
-  height: 10px;
+  width: 18rem;
+  height: 0.5rem;
   border-radius: 200px;
   background-color: #e8e3b7;
   border: 0rem;
